# raytracer

./: Cargo.toml  README.md
src/: aabb.rs  bvh.rs  camera.rs  hit.rs  main.rs  moving_sphere.rs  ray.rs  render.rs  scene.rs  sphere.rs  texture.rs  utils.rs  vec3.rs
src/geometry/: mod.rs  moving_sphere.rs  sphere.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/scene/: mod.rs
src/texture/: checker_texture.rs  solid_color.rs
