[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
rand = "0.8"
indicatif = { version = "0.16.2", features = ["rayon"] }
png = "0.17.2"
rayon = "1.5.3"
